<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LeagueActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop" android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imageView4" android:scaleType="fitCenter"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_logo"/>
    <TextView
            android:text="@string/desierd_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView4" android:fontFamily="@font/montserrat" android:textColor="@android:color/white"
            android:textSize="18sp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView4">
        <ToggleButton
                android:text="@string/MENS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/mensLeagueBtn" android:textOff="@string/MENS"
                android:textOn="@string/MENS" android:textColor="@android:color/white"
                android:background="@drawable/swoosh_toggle" android:onClick="mensButonClicked"/>
        <ToggleButton
                android:text="@string/WOMENS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/womensLeagueBtn" android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" android:textOff="@string/WOMENS" android:textOn="@string/WOMENS"
                android:textColor="@android:color/white" android:background="@drawable/swoosh_toggle"
                android:onClick="womensButonClicked"/>
        <ToggleButton
                android:text="@string/co_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/coedLeagueBtn" android:textOff="@string/co_ed"
                android:textOn="@string/co_ed" android:textColor="@android:color/white"
                android:background="@drawable/swoosh_toggle" android:onClick="coedButonClicked"/>
    </LinearLayout>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/LeagueNextBtn" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3" android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat" android:textSize="14sp" android:background="@drawable/swoosh_button"
            android:layout_marginEnd="16dp" android:layout_marginStart="16dp" android:onClick="leagueNextClicked"/>
</android.support.constraint.ConstraintLayout>