<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/welcomescreenbg"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            android:contentDescription="@string/welcom_screen"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imageView2" android:scaleType="fitCenter"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/swoosh_logo"/>
    <TextView
            android:text="@string/go_all_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView" android:textColor="@android:color/white" android:fontFamily="@font/montserrat"
            android:textSize="46sp" app:layout_constraintHorizontal_bias="0.497" android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <TextView
            android:text="@string/on_going_all_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView2" android:textColor="@android:color/white" android:textSize="22sp"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:fontFamily="@font/montserrat"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/find_a_team_in_your_city_and_dominate_the_league"
            android:layout_width="218dp"
            android:layout_height="39dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView3" android:singleLine="false"
            android:textColor="@android:color/white"
            app:layout_constraintHorizontal_bias="0.494" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:textAlignment="center"
            android:fontFamily="@font/montserrat"/>
    <Button
            android:text="@string/get_started"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/getStartedBtn" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView" android:fontFamily="@font/montserrat"
            android:background="@drawable/swoosh_button" android:textColor="@android:color/white"/>

</android.support.constraint.ConstraintLayout>