<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.SkillActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/imageView6" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imageView5" android:scaleType="fitCenter"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_logo"/>
    <TextView
            android:text="@string/i_am_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView5" android:textColor="@android:color/white" android:fontFamily="@font/montserrat"
            android:textSize="18sp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="394dp"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp">
        <ToggleButton
                android:text="@string/beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/beginnerSkillBtn" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"
                android:fontFamily="@font/montserrat" android:textOff="@string/beginner"
                android:textOn="@string/beginner"
                android:layout_marginEnd="8dp" android:onClick="onBeginnerclick"/>
        <ToggleButton
                android:text="@string/baller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/BallerSkillBtn" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"
                android:fontFamily="@font/montserrat" android:textOff="@string/baller" android:textOn="@string/baller"
                android:layout_marginStart="8dp" android:onClick="onBallerClick"/>
    </LinearLayout>
    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp" android:id="@+id/skillFinishBtn" android:fontFamily="@font/montserrat"
            android:background="@drawable/swoosh_button" android:textColor="@android:color/white"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:onClick="onSkillFinishClicked"/>
</android.support.constraint.ConstraintLayout>